[gd_scene load_steps=8 format=2]

[ext_resource path="res://pictures/330045358_160666043546734_5455400548512453727_n.jpg" type="Texture" id=1]
[ext_resource path="res://PhotoNaviButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://pictures/337393468_885143826112668_405578401282885685_n.jpg" type="Texture" id=3]
[ext_resource path="res://pictures/337132544_3516828838639713_6061182249861058526_n.jpg" type="Texture" id=4]
[ext_resource path="res://pictures/336638504_1240654613208947_5292585408639929392_n.jpg" type="Texture" id=5]
[ext_resource path="res://pictures/337812787_108850282162780_6660291287182045868_n.jpg" type="Texture" id=6]
[ext_resource path="res://pictures/PhotoNavi.gd" type="Script" id=7]

[node name="PhotoNavi" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 7 )

[node name="Photos2" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="TextureRect" type="TextureRect" parent="Photos2"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -3.0
margin_top = -80.0
margin_right = 437.0
margin_bottom = 351.0
rect_scale = Vector2( 0.600439, 0.600439 )
texture = ExtResource( 1 )

[node name="TextureRect2" type="TextureRect" parent="Photos2"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -3.0
margin_top = -2.0
margin_right = 437.0
margin_bottom = 445.0
rect_scale = Vector2( 0.600439, 0.600439 )
texture = ExtResource( 5 )

[node name="TextureRect3" type="TextureRect" parent="Photos2"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -3.0
margin_top = -155.0
margin_right = 437.0
margin_bottom = 891.0
rect_scale = Vector2( 0.600439, 0.600439 )
texture = ExtResource( 6 )

[node name="TextureRect4" type="TextureRect" parent="Photos2"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -3.0
margin_top = -368.0
margin_right = 437.0
margin_bottom = 698.0
rect_scale = Vector2( 0.600439, 0.600439 )
texture = ExtResource( 3 )

[node name="TextureRect5" type="TextureRect" parent="Photos2"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -4.0
margin_top = -122.0
margin_right = 436.0
margin_bottom = 944.0
rect_scale = Vector2( 0.600439, 0.600439 )
texture = ExtResource( 4 )

[node name="LeftButton" type="Button" parent="."]
modulate = Color( 1, 1, 1, 0.196078 )
margin_right = 54.0
margin_bottom = 360.0
text = "<"

[node name="RightButton" type="Button" parent="."]
modulate = Color( 1, 1, 1, 0.196078 )
margin_left = 588.0
margin_right = 642.0
margin_bottom = 360.0
text = "<"

[node name="ChangeSceneButton" type="Button" parent="."]
margin_left = 272.0
margin_top = 290.0
margin_right = 381.0
margin_bottom = 327.0
text = "CHANGE SCENE"

[node name="Photos" type="Node2D" parent="."]
visible = false

[node name="VeryFront" type="TextureRect" parent="Photos"]
visible = false
margin_left = -6.0
margin_top = -79.0
margin_right = 1074.0
margin_bottom = 712.0
rect_scale = Vector2( 0.600991, 0.600991 )
texture = ExtResource( 1 )

[node name="PhotoNaviButton" parent="Photos/VeryFront" instance=ExtResource( 2 )]
margin_left = 705.502
margin_top = 349.423
margin_right = 830.502
margin_bottom = 547.423

[node name="Terrace" type="TextureRect" parent="Photos"]
visible = false
margin_left = -6.0
margin_top = -312.0
margin_right = 1074.0
margin_bottom = 1114.0
rect_scale = Vector2( 0.600991, 0.600991 )
texture = ExtResource( 3 )

[node name="PhotoNaviButton" parent="Photos/Terrace" instance=ExtResource( 2 )]
margin_left = 9.98352
margin_top = 785.37
margin_right = 134.984
margin_bottom = 983.37

[node name="Terrace2" type="TextureRect" parent="Photos"]
margin_left = -6.0
margin_top = -121.0
margin_right = 1074.0
margin_bottom = 1305.0
rect_scale = Vector2( 0.600991, 0.600991 )
texture = ExtResource( 4 )

[node name="PhotoNaviButton" parent="Photos/Terrace2" instance=ExtResource( 2 )]
margin_left = 9.98352
margin_top = 785.37
margin_right = 134.984
margin_bottom = 983.37

[node name="Terrace3" type="TextureRect" parent="Photos"]
visible = false
margin_left = -6.0
margin_top = -312.0
margin_right = 1074.0
margin_bottom = 1114.0
rect_scale = Vector2( 0.600991, 0.600991 )
texture = ExtResource( 3 )

[node name="PhotoNaviButton" parent="Photos/Terrace3" instance=ExtResource( 2 )]
margin_left = 9.98352
margin_top = 785.37
margin_right = 134.984
margin_bottom = 983.37

[node name="Terrace4" type="TextureRect" parent="Photos"]
visible = false
margin_left = -6.0
margin_top = -312.0
margin_right = 1074.0
margin_bottom = 1114.0
rect_scale = Vector2( 0.600991, 0.600991 )
texture = ExtResource( 3 )

[node name="PhotoNaviButton" parent="Photos/Terrace4" instance=ExtResource( 2 )]
margin_left = 9.98352
margin_top = 785.37
margin_right = 134.984
margin_bottom = 983.37

[node name="Terrace5" type="TextureRect" parent="Photos"]
visible = false
margin_left = -6.0
margin_top = -312.0
margin_right = 1074.0
margin_bottom = 1114.0
rect_scale = Vector2( 0.600991, 0.600991 )
texture = ExtResource( 3 )

[node name="PhotoNaviButton" parent="Photos/Terrace5" instance=ExtResource( 2 )]
margin_left = 9.98352
margin_top = 785.37
margin_right = 134.984
margin_bottom = 983.37

[node name="Terrace6" type="TextureRect" parent="Photos"]
visible = false
margin_left = -6.0
margin_top = -312.0
margin_right = 1074.0
margin_bottom = 1114.0
rect_scale = Vector2( 0.600991, 0.600991 )
texture = ExtResource( 3 )

[node name="PhotoNaviButton" parent="Photos/Terrace6" instance=ExtResource( 2 )]
margin_left = 9.98352
margin_top = 785.37
margin_right = 134.984
margin_bottom = 983.37

[connection signal="pressed" from="LeftButton" to="." method="_on_LeftButton_pressed"]
[connection signal="pressed" from="RightButton" to="." method="_on_RightButton_pressed"]
[connection signal="pressed" from="ChangeSceneButton" to="." method="_on_ChangeSceneButton_pressed"]
